# Softewareentwicklung2

./: CMakeLists.txt  Class.cpp  Class.h  main.cpp  struct_to_class.cpp
